# RayTracingJourney

./: CMakeLists.txt  README.md
.cache/clangd/index/: Color.h.0443A77FA70A5F60.idx  Color.h.D9326A99CA941761.idx  Ray.h.BBE9CD3C8D328BF3.idx  Ray.h.F80F0F484922FF42.idx  Vec3.h.19CA332F77C97556.idx  Vec3.h.5D7083C0FB533D59.idx  main.cpp.3E862626742A12C3.idx  main.cpp.E5A3EFC96940AB3B.idx
doc/: inOneweek.md
render_result/: inOneweek.md
render_result/in_one_weekend/: 20 A distant view.ppm  21 Zooming in.ppm  A hollow glass sphere .ppm  Glass sphere that sometimes refracts .ppm  image_reflection.ppm
render_result/nextweek/: 01bouncingSpheres.ppm  02spheresOnCheckeredGround.ppm  04EarthmappedSphere.ppm  06HashedRandomTexture.ppm  07PerlinTextureWithTrilinearInterpolation.ppm  08PerlinTextureWithTrilinearInterpolationSmoothed.ppm  10PerlinNoiseTrue.ppm  11PerlinNoiseWithTurbulence.ppm  12PerlinMarbled.ppm  14SceneWithRectangleAndSphereLightSources.ppm  15emptyCornellBox.ppm  16cornellBoxWithTwoBlocks.ppm  17standardCornellBoxScene.ppm  18CornellBoxWithBlocksOfSmoke.ppm  19finalScene-artifact.ppm
src/: AABB.h  BVH.h  CMakeLists.txt  Camera.h  Color.h  ConstantMedium.h  Hittable.h  HittableList.h  Interval.h  Material.h  Perlin.h  Quad.h  RTWeekend.h  Ray.h  Sphere.h  Texture.h  Vec3.h  main.cpp  rtw_stb_image.h
