cmake_minimum_required(VERSION 3.0.0)
project(OSGCitySpace VERSION 0.1.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)

if(MSVC)
endif()
if(MSVC)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif()

# add_definitions(-DBOOST_THREAD_USE_LIB)
set(RAYTRACINGJOURNEY_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(RAYTRACINGJOURNEY_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build")
set(CMAKE_INSTALL_PREFIX "${RAYTRACINGJOURNEY_BUILD_DIR}/bin")
set(BINARY_ROOT_DIR "${CMAKE_INSTALL_PREFIX}/")

add_subdirectory(src)
# message(${OSG_LIB})