set(RAYTRACINGJOURNEY_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(RAYTRACINGJOURNEY_NAME "Raytracing")
file(GLOB_RECURSE SRC "${RAYTRACINGJOURNEY_SRC_DIR}/*.cpp")

add_executable(${RAYTRACINGJOURNEY_NAME} ${SRC})

set_target_properties(${RAYTRACINGJOURNEY_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_INSTALL_PREFIX}
)
